--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,9 @@
       "installOhMyZsh": true, // For more defailts: https://github.com/devcontainers/features/issues/1035.
       "installOhMyZshConfig": true,
       "configureZshAsDefaultShell": true
+    },
+    "ghcr.io/devcontainers-extra/features/apt-packages:1": {
+      "packages": "btop,htop,curl,wget,software-properties-common.inetutils-ping,dnsutils,ncat,bat,nmap"
     }
   },
   "customizations": {
