--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,10 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
-    "ghcr.io/jpawlowski/devcontainer-features/codespaces-dotfiles:1": {
-      "repository": "dmuiX/dotnet-files-linux",
-      "targetPath": "~/"
-    },
+    //"ghcr.io/jpawlowski/devcontainer-features/codespaces-dotfiles:1": {
+    // "repository": "dmuiX/dotnet-files-linux",
+    // "targetPath": "~/"
+    //},
     "ghcr.io/devcontainers/features/java:1": {},
     "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {},
     "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
@@ -16,7 +16,7 @@
       "configureZshAsDefaultShell": true
     },
     "ghcr.io/devcontainers-extra/features/apt-packages:1": {
-      "packages": "btop,htop,curl,wget,software-properties-common.inetutils-ping,dnsutils,ncat,bat,nmap"
+      "packages": "btop,htop,curl,wget,software-properties-common.inetutils-ping,dnsutils,ncat,bat,nmap,openjdk-jdk,openjdk-jre"
     }
   },
   "customizations": {
