--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
       "configureZshAsDefaultShell": true
     },
     "ghcr.io/devcontainers-extra/features/apt-packages:1": {
-      "packages": "btop,htop,curl,wget,software-properties-common.inetutils-ping,dnsutils,ncat,bat,nmap,openjdk-jdk,openjdk-jre"
+      "packages": "btop,htop,curl,wget,software-properties-common.inetutils-ping,dnsutils,ncat,bat,nmap"
     }
   },
   "customizations": {
